Fix sidebar and wrapper scrolls and each other topics. Table components class addeds and perfect scrollbar plugin included

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -27,6 +27,23 @@ body {
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
     background-color: $gray;
+    overflow: hidden;
+    position: relative;
+    height: 100vh;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        width: 1rem;
+    }
+
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(black, .3);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 1rem;
+        background-color: $purpleLight; 
+    }
 
     @include respond(tab-port) {
         padding: 0;
