--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -10,6 +10,21 @@
     color: $purpleLight;
     margin-bottom: 2rem;
 
+    th {
+        background-color: $blue;
+        color: $purpleDark;
+        font-weight: 700;
+        padding: 1.8rem;
+
+        &:first-child {
+            border-top-left-radius: .5rem;
+        }
+
+        &:last-child {
+            border-top-right-radius: .5rem;
+        }
+    }
+
     &--border {
         border-spacing: .1rem;
         border-color: $purpleLight;
@@ -30,18 +45,13 @@
         }
     }
 
-    th {
-        background-color: $blue;
-        color: $purpleDark;
-        font-weight: 700;
-        padding: 1.8rem;
-
-        &:first-child {
-            border-top-left-radius: .5rem;
-        }
-
-        &:last-child {
-            border-top-right-radius: .5rem;
+    &--hover {
+        tr {
+            transition: all .2s ease-in-out;
+    
+            &:hover {
+                box-shadow: 0 .3rem .8rem rgba($graytext, .5);
+            }
         }
     }
 
